force-app/main/default/objects/Lilly_Tag__c/Lilly_Tag__c.object-meta.xml
<CustomObject>
    <label>Tag</label>
    <nameField>
        <label>Tag Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>