force-app/main/default/objects/Lilly_Tag__c/fields/Lilly_Color__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Color__c</fullName>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>