force-app/main/default/objects/Lilly_Tag__c/fields/Lilly_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>