force-app/main/default/objects/Lilly_Tag__c/fields/Lilly_Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Tag_Type__c</fullName>
    <label>Tag Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>