force-app/main/default/objects/Lilly_Tag__c/fields/Lilly_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Updated_At__c</fullName>
    <label>Updated At</label>
    <type>Date</type>
</CustomField>