force-app/main/default/objects/Lilly_Tag__c/fields/OfflineCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedDate__c</fullName>
    <label>Offline Created Date</label>
    <type>DateTime</type>
</CustomField>