force-app/main/default/objects/Lilly_Tag__c/fields/OfflineLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedDate__c</fullName>
    <label>Offline Last Modified Date</label>
    <type>DateTime</type>
</CustomField>